[gd_scene load_steps=36 format=1]

[ext_resource path="res://scripts/player.gd" type="Script" id=1]
[ext_resource path="res://scenes/player_bullet.tscn" type="PackedScene" id=2]
[ext_resource path="res://art/player/Lightning_engine/lightning_001.tex" type="Texture" id=3]
[ext_resource path="res://art/player/Lightning_engine/lightning_002.tex" type="Texture" id=4]
[ext_resource path="res://art/player/Lightning_engine/lightning_003.tex" type="Texture" id=5]
[ext_resource path="res://art/player/Lightning_engine/lightning_004.tex" type="Texture" id=6]
[ext_resource path="res://art/player/Lightning_engine/lightning_005.tex" type="Texture" id=7]
[ext_resource path="res://art/player/Lightning_engine/lightning_006.tex" type="Texture" id=8]
[ext_resource path="res://art/player/Lightning_engine/lightning_007.tex" type="Texture" id=9]
[ext_resource path="res://art/player/Lightning_engine/lightning_008.tex" type="Texture" id=10]
[ext_resource path="res://art/player/Lightning_engine/lightning_009.tex" type="Texture" id=11]
[ext_resource path="res://art/player/Lightning_engine/lightning_010.tex" type="Texture" id=12]
[ext_resource path="res://art/player/Lightning_engine/lightning_011.tex" type="Texture" id=13]
[ext_resource path="res://art/player/Lightning_engine/lightning_012.tex" type="Texture" id=14]
[ext_resource path="res://art/player/Lightning_engine/lightning_013.tex" type="Texture" id=15]
[ext_resource path="res://art/player/Lightning_engine/lightning_014.tex" type="Texture" id=16]
[ext_resource path="res://art/player/Lightning_engine/lightning_015.tex" type="Texture" id=17]
[ext_resource path="res://art/player/Lightning_engine/lightning_016.tex" type="Texture" id=18]
[ext_resource path="res://art/player/Body_009.tex" type="Texture" id=19]
[ext_resource path="res://art/player/Engine_009.tex" type="Texture" id=20]
[ext_resource path="res://art/PNG/Lasers/Muzzle_blue.tex" type="Texture" id=21]
[ext_resource path="res://snd/shoot1.wav" type="Sample" id=22]
[ext_resource path="res://snd/shoot2.wav" type="Sample" id=23]
[ext_resource path="res://scripts/ability_node.gd" type="Script" id=24]

[sub_resource type="CapsuleShape2D" id=1]

custom_solver_bias = 0.0
radius = 67.0807
height = 40.3572

[sub_resource type="SpriteFrames" id=2]

animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ) ],
"loop": true,
"name": "idle",
"speed": 15.0
} ]

[sub_resource type="SampleLibrary" id=3]

samples/shoot1 = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 22 )
}
samples/shoot2 = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 23 )
}

[sub_resource type="StyleBoxFlat" id=4]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0
bg_color = Color( 0, 1, 0.0390625, 1 )
light_color = Color( 0.0540161, 0.921875, 0.332002, 1 )
dark_color = Color( 0.00907493, 0.0664063, 0.00259399, 1 )
border_size = 0
border_blend = true
draw_bg = true

[sub_resource type="Animation" id=7]

length = 2.0
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("engine:transform/pos")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 1.3 ),
"transitions": FloatArray( 0.366021, 1 ),
"update": 0,
"values": [ Vector2( 0, -70 ), Vector2( 0, -65 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("lightning:transform/pos")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0, 1.3 ),
"transitions": FloatArray( 0.366021, 1 ),
"update": 0,
"values": [ Vector2( 0, -43 ), Vector2( 0, -38 ) ]
}

[sub_resource type="Animation" id=8]

resource/name = "stop_to_idle"
length = 0.5
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("lightning:transform/pos")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.5 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -49 ), Vector2( 0, -43 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("engine:transform/pos")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0, 0.5 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -78 ), Vector2( 0, -70 ) ]
}

[sub_resource type="Animation" id=9]

length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("lightning:transform/pos")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 1 ),
"transitions": FloatArray( 0.176777, 1 ),
"update": 0,
"values": [ Vector2( 0, -43 ), Vector2( 0, -49 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("engine:transform/pos")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0, 1 ),
"transitions": FloatArray( 0.176777, 1 ),
"update": 0,
"values": [ Vector2( 0, -70 ), Vector2( 0, -78 ) ]
}

[sub_resource type="Animation" id=10]

length = 0.5
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("lightning:transform/pos")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.5 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -33 ), Vector2( 0, -43 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("engine:transform/pos")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0, 0.5 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -60 ), Vector2( 0, -70 ) ]
}

[sub_resource type="Animation" id=11]

length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("lightning:transform/pos")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 1 ),
"transitions": FloatArray( 0.176777, 1 ),
"update": 0,
"values": [ Vector2( 0, -43 ), Vector2( 0, -33 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("engine:transform/pos")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0, 1 ),
"transitions": FloatArray( 0.176777, 1 ),
"update": 0,
"values": [ Vector2( 0, -70 ), Vector2( 0, -60 ) ]
}

[sub_resource type="Animation" id=5]

resource/name = "gun_1"
length = 0.1
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("gun_1/flash:visibility/visible")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.1 ),
"transitions": FloatArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=6]

resource/name = "gun_2"
length = 0.1
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("gun_2/flash:visibility/visible")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.1 ),
"transitions": FloatArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[node name="player" type="KinematicBody2D" groups=[
"player",
"player_obj",
]]

transform/scale = Vector2( 0.5, 0.5 )
z/z = 3
input/pickable = true
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
collision/layers = 3
collision/mask = 3
collision/margin = 0.08
script/script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}
bullet = ExtResource( 2 )

[node name="lightning" type="AnimatedSprite" parent="."]

transform/pos = Vector2( 0, -43 )
frames = SubResource( 2 )
animation = "idle"
frame = 9
playing = true

[node name="body" type="Sprite" parent="."]

transform/pos = Vector2( 0, 25 )
texture = ExtResource( 19 )
flip_v = true

[node name="engine" type="Sprite" parent="."]

transform/pos = Vector2( 0, -70 )
texture = ExtResource( 20 )
flip_v = true

[node name="collision" type="CollisionShape2D" parent="."]

visibility/visible = false
shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="bullet_container" type="Node" parent="."]

[node name="gun_1" type="Position2D" parent="."]

transform/pos = Vector2( 67, 30 )

[node name="flash" type="Sprite" parent="gun_1"]

visibility/visible = false
visibility/blend_mode = 1
transform/pos = Vector2( 0, 1 )
texture = ExtResource( 21 )
flip_v = true

[node name="gun_2" type="Position2D" parent="."]

transform/pos = Vector2( -67, 30 )

[node name="flash" type="Sprite" parent="gun_2"]

visibility/visible = false
visibility/blend_mode = 1
transform/pos = Vector2( 0, 1 )
texture = ExtResource( 21 )
flip_v = true

[node name="bullet_rate" type="Timer" parent="."]

process_mode = 1
wait_time = 0.2
one_shot = true
autostart = false

[node name="camera" type="Camera2D" parent="."]

anchor_mode = 1
rotating = false
current = true
zoom = Vector2( 1, 1 )
limit/left = -10000000
limit/top = -10000000
limit/right = 10000000
limit/bottom = 10000000
drag_margin/h_enabled = true
drag_margin/v_enabled = true
smoothing/enable = true
smoothing/speed = 5.0
drag_margin/left = 0.0
drag_margin/top = 0.0
drag_margin/right = 0.0
drag_margin/bottom = 0.0

[node name="shoot_sound" type="SamplePlayer" parent="."]

config/polyphony = 1
config/samples = SubResource( 3 )
default/volume_db = -25.0
default/pitch_scale = 1.0
default/pan = 0.0
default/depth = 0.0
default/height = 0.0
default/filter/type = 0
default/filter/cutoff = 5000.0
default/filter/resonance = 1.0
default/filter/gain = 1.0
default/reverb_room = 2
default/reverb_send = 0.0
default/chorus_send = 0.0

[node name="ability_node" type="Node" parent="."]

script/script = ExtResource( 24 )

[node name="timer_container" type="Node" parent="ability_node"]

[node name="control" type="Control" parent="."]

anchor/right = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = -53.0
margin/right = 64.0
margin/bottom = -53.0

[node name="hp_bar" type="ProgressBar" parent="control"]

anchor/top = 1
anchor/bottom = 1
rect/scale = Vector2( 1, 0.5 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 0
size_flags/vertical = 0
margin/left = -50.0
margin/top = 50.0
margin/right = 50.0
margin/bottom = 34.0
custom_styles/fg = SubResource( 4 )
range/min = 0.0
range/max = 100.0
range/step = 1.0
range/page = 0.0
range/value = 100.0
range/exp_edit = false
range/rounded = false
percent/visible = false

[node name="respawn_time" type="Timer" parent="."]

process_mode = 1
wait_time = 1.0
one_shot = true
autostart = false

[node name="moving_animations" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.05
root/root = NodePath("..")
anims/idle = SubResource( 7 )
anims/stop_to_idle = SubResource( 8 )
anims/stoping = SubResource( 9 )
anims/thrust_to_idle = SubResource( 10 )
anims/thrusting = SubResource( 11 )
next/stop_to_idle = "idle"
next/thrust_to_idle = "idle"
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="gun_anim" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/gun_1 = SubResource( 5 )
anims/gun_2 = SubResource( 6 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[connection signal="timeout" from="respawn_time" to="." method="alive"]


